// Core Odoo 19 Schema
// Generated by Odoo Agent

Table res_partner {
  id integer [pk]
  name varchar
  company_id integer [ref: > res_company.id]
  user_id integer [ref: > res_users.id]
  parent_id integer [ref: > res_partner.id]
  is_company boolean
  email varchar
  phone varchar
  active boolean
}

Table res_users {
  id integer [pk]
  login varchar
  password varchar
  partner_id integer [ref: - res_partner.id]
  company_id integer [ref: > res_company.id]
  active boolean
}

Table res_company {
  id integer [pk]
  name varchar
  parent_id integer [ref: > res_company.id]
  currency_id integer [ref: > res_currency.id]
  partner_id integer [ref: > res_partner.id]
}

Table res_currency {
  id integer [pk]
  name varchar
  symbol varchar
  rate float
}

Table ir_model {
  id integer [pk]
  model varchar
  name varchar
  state varchar
  transient boolean
}

Table ir_module_module {
  id integer [pk]
  name varchar
  state selection [note: "installed, uninstalled, uninstallable"]
  author varchar
  website varchar
}

// Relationships
Ref: res_users.company_id > res_company.id
Ref: res_partner.company_id > res_company.id
